<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
    android:id="@+id/myAppPortfolio">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/spotifyStreamer"
        android:id="@+id/btnSpotify"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="68dp"
        android:width="200dp"
        android:background="@color/buttonBackground"
        android:textColor="#ffffffff"
        android:onClick="showToast" />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/mainPageTitle"
        android:id="@+id/textView2"
        android:width="300dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:padding="5dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/scoresApp"
        android:id="@+id/btnScores"
        android:layout_below="@+id/btnSpotify"
        android:layout_centerHorizontal="true"
        android:width="200dp"
        android:background="@color/buttonBackground"
        android:textColor="#ffffffff"
        android:layout_marginTop="5dp"
        android:onClick="showToast" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/libraryApp"
        android:id="@+id/btnLibraryApp"
        android:layout_below="@+id/btnScores"
        android:layout_centerHorizontal="true"
        android:width="200dp"
        android:background="@color/buttonBackground"
        android:textColor="#ffffffff"
        android:layout_marginTop="5dp"
        android:onClick="showToast" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/buildItBigger"
        android:id="@+id/btnBuildItBigger"
        android:width="200dp"
        android:background="@color/buttonBackground"
        android:textColor="#ffffffff"
        android:layout_below="@+id/btnLibraryApp"
        android:layout_alignStart="@+id/btnBaconReader"
        android:layout_marginTop="5dp"
        android:onClick="showToast" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/baconReader"
        android:id="@+id/btnBaconReader"
        android:width="200dp"
        android:background="@color/buttonBackground"
        android:textColor="#ffffffff"
        android:layout_below="@+id/btnBuildItBigger"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp"
        android:onClick="showToast" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/myOwnApp"
        android:id="@+id/btnMyOwnApp"
        android:width="200dp"
        android:background="@android:color/holo_red_dark"
        android:textColor="#ffffffff"
        android:layout_below="@+id/btnBaconReader"
        android:layout_alignStart="@+id/btnBaconReader"
        android:layout_marginTop="5dp"
        android:layout_gravity="center"
        android:onClick="showToast" />

</RelativeLayout>
